--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@huggingface/inference": "^3.14.0",
+    "lucide-react": "^0.511.0",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
-    "nanoid": "^5.1.3",
+    "nanoid": "^5.1.5",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-simple-typewriter": "^5.0.1",
     "url": "^0.11.4"
   },
   "devDependencies": {
